--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Target RPS RCAV</title>
-    <meta name="csrf-param" content="authenticity_token" />
-<meta name="csrf-token" content="XWi94C0h5N4ooSQxs+U4TrIi7QTn9G7CdLA8jbTf6EHIRabKFjSR2HLZC0JjPfoc/xayY4wr/IByxAi2YuYFVQ==" />
+    <title> RPS RCAV</title>
 
     <!-- Expand the number of characters we can use in the document beyond basic ASCII 🎉 -->
     <meta charset="utf-8">
